# chess-

./: CMakeLists.txt  README.md  build.sh
include/: game.h  piece.h
src/: CMakeLists.txt  game.cpp
